--- a/SuperPower/app/views/powers/show.html.erb
+++ b/SuperPower/app/views/powers/show.html.erb
@@ -2,15 +2,17 @@
 
 <h4> <%= @power.name %> </h4>
 
+<h4> <%= @power.reason %> </h4>
+
 <h4> <%= @power.rating %> </h4>
 
 
-<p> <%= Power.all.select {|power| power.name == self.name }.map {|power| power.rating }.reduce(:+) / Power.all.select {|power| power.name == self.name }.count %> </p>
+<p> <%# Power.all.select {|power| power.name == self.name }.map {|power| power.rating }.reduce(:+) / Power.all.select {|power| power.name == self.name }.count %> </p>
 
 <p> <%= "Already exists in the comic book world" if @power.already_exists == true %> </p>
 <p> <%= "Watch out Marvel" if @power.already_exists == false %> </p>
 
 
 <%= button_to "Delete Power", power_path(@power), method: :delete %>
-<%= button_to "Return to List of SuperPowers", powers_path(@power) %>
+<%# button_to "Return to List of SuperPowers", powers_path(@power) %>
 
